@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.487 2008/04/01 18:39:05 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.488 2008/04/01 19:36:57 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -11540,10 +11540,21 @@ Ffigure_mapcontours
 
  `test palette` draws graphically profiles R(z),G(z),B(z), where 0<=z<=1, as
  calculated by the current color `palette`. In other words, it is a beautiful
- plot you would have to do yourself with the result of `show palette palette 256 float`.
+ plot you would have to construct from the result of `show palette palette 256 float`.
  The optional parameter, a permutation of letters rgb, determines the sequence of
  r,g,b profiles drawn one after the other --- try this yourself for `set palette
  gray`. The default sequence is rgb.
+2 undefine
+?commands undefine
+?undefine
+ Clear one or more previously defined user variables.  This is useful in order
+ to reset the state of a script containing an initialization test.
+
+ Example:
+
+       undefine foo foo1 foo2
+       if (!exists("foo")) load "initialize.gp"
+
 2 unset
 ?commands unset
 ?unset
